--- a/Tugas 1/index.html
+++ b/Tugas 1/index.html
@@ -15,8 +15,7 @@
         Carag (Emile Chérif) is a teenager who has special abilities; he can transform into an animal or known as shapeshifters. And as it turns out, he's not the only one who has that particular ability.
      </p>
      <!--image-->
-     <img src="d:\woodwalkers\Lilli-Falk-sebagai-Holly-Emile-Cherif-sebagai-Carag-dan-Johan-van-Ehrlich-sebagai-Brandon.webp
-     " alt="500">
+     <img src="Lilli-Falk-sebagai-Holly-Emile-Cherif-sebagai-Carag-dan-Johan-van-Ehrlich-sebagai-Brandon.webp" alt="500">
      <p>
         He eventually joined Clearwater High School, a special school for special children who had the same abilities as him. There he was mentored by Andrew Milling, someone who also had the same abilities as him. He then learned of the rebel forces of the shapeshifters who tried to fight humans. Not alone, Carag fights him along with Holly (Lilly Falk) who can transform into red squirrels and Brandon (Jonathan von Ehrlich) with the ability to turn into a bison. 
      </p>
@@ -29,34 +28,34 @@
      <ul>
         <li>Carag the Main Character (Emile Chérif)</li>
         <a href="https://www.instagram.com/emilecrf?igsh=MWxocHFvd2RoM243dw== ">
-           <img src="d:\woodwalkers\Tanpa Judul.jpg" 
+           <img src="Tanpa Judul.jpg" 
            alt="aku"
            width="200">
            
         </a>
         <li>Jeffrey (Emil Bloch)</li>
         <a href="https://www.instagram.com/bloch_emil?igsh=NGd0M2N5MGRpZmJk">
-            <img src="d:\woodwalkers\emil.jpg" 
+            <img src="dwoodwalkersemil.jpg" 
             alt="nagi"
             width="200">
         </a>
         <li>Andrew Milling (Oliver Masucci)</li>
         <a href="https://www.instagram.com/oliver_masucci?igsh=MWE0ZDBjcm9kbTZsOQ==">
-            <img src="d:\woodwalkers\oliver.jpg"
+            <img src="oliver.jpg"
             alt="isagi"
             width="200">
 
         </a>
         <li>Holly (Lili Falk)</li>
         <a href="https://www.instagram.com/lillifalk_?igsh=cnVydmthYzJja2Vz">
-            <img src="d:\woodwalkers\lilli.jpg"
+            <img src="lilli.jpg"
             alt="kaiser"
             width="200">
         
         </a>
         <li>Brandon (Johan von Ehrlich)</li>
         <a href="https://www.instagram.com/johanvonehrlich?igsh=YTNrdjduZTVjMmJj">
-            <img src="d:\woodwalkers\johan.jpg"
+            <img src="johan.jpg"
             alt="kaiser"
             width="200">
         </a>
@@ -94,12 +93,12 @@
             Frozen menjadi film animasi terlaris sepanjang masa hingga dikalahkan oleh versi remake dari The Lion King pada tahun 2019.
     </p>
     <!--image-->
-    <img src="d:\woodwalkers\scale.webp" 
+    <img src="scale.webp" 
     alt="ayaya">
     <hr>
     <h3>Frozen</h3>
      <!--image-->
-     <img src="d:\woodwalkers\frozenl.jpg"
+     <img src="frozenl.jpg"
       alt="anime"
       width="400">
       <audio controls>
@@ -119,7 +118,7 @@
       <ul>
         <li>I Idina Menzel sebagai Elsa</li>        </li>
         <a href="https://www.instagram.com/p/DEKWXW9TkQd/?igsh=MWcwMWNuZHN2eHVkcA== ">
-        <img src="d:\woodwalkers\IDINSAjpg.jpg" 
+        <img src="IDINSAjpg.jpg" 
         alt="rani"
         width="200">
 
@@ -130,7 +129,7 @@
         <br>
         <li> Kristen Bell sebagai Anna</li>
         <a href="https://www.instagram.com/idinamenzel?igsh=YTQ2bzhlb2J2NWRs">
-        <img src="d:\woodwalkers\KRISTul.jpg" 
+        <img src="KRISTul.jpg" 
         alt="szeiya"
         width="200">
 
@@ -141,7 +140,7 @@
      <br>
      <li> Josh Gad sebagai Olaf</li> 
      <a href="https://www.instagram.com/joshgad?igsh=Z3ZncTFxZG0weTJl">
-     <img src="d:\woodwalkers\joshl.webp" 
+     <img src="joshl.webp" 
      alt="rin"
      width="200">
 
@@ -152,7 +151,7 @@
      <br>
      <li>Jonathan Groff sebagai Kristoff</li>    </li>
      <a href="https://www.instagram.com/jonathangroff_xo?igsh=ZDNhY2F3cGZ4dnlk">
-     <img src="d:\woodwalkers\JONATH.webp" 
+     <img src="JONATH.webp" 
      alt="chigiri"
      width="200">
 
@@ -163,7 +162,7 @@
      <br>
      <li>Santino Fontana sebagai Hans</li>
      <a href="https://www.instagram.com/santinofontana?igsh=dm91bnN2bWJubHRr">
-     <img src="d:\woodwalkers\santinowebp.webp" 
+     <img src="santinowebp.webp" 
      alt="sae"
      width="200">
      </a>
@@ -182,7 +181,7 @@
      <!--DAY 3-->
      <h2>Day 3: Tingker Bell </h2>
      <!--image-->
-     <img src="d:\woodwalkers\tingker bell.jpg" 
+     <img src="tingker bell.jpg"
      alt="hhhhh"
      width="400">
 
@@ -197,35 +196,35 @@
      </p>
      <br>
      <li>Mae Whitman sebagai Tinker Bell    </li>
-     <img src="d:\woodwalkers\tinker bell.jpg" 
+     <img src="tinker bell.jpg" 
      alt="Tinkerbell"
      width="200">
      <p>
         Tinker Bell adalah peri berbakat yang ahli dalam membuat dan memperbaiki benda-benda. Ia ingin diakui dan sering merasa penasaran tentang dunia di luar Pixie Hollow. 
      </p>
      <li>Raven-Symoné sebagai Iridessa    </li>
-     <img src="d:\woodwalkers\Raven-Symoné sebagai Iridessa.jpg" 
+     <img src="Raven-Symoné sebagai Iridessa.jpg" 
      alt="Iridessa"
      width="200">
      <p>
         Iridessa adalah peri cahaya yang penuh energi dan selalu berusaha menjaga segalanya tetap teratur. Ia sangat bertanggung jawab dan berhati-hati dalam menggunakan kekuatannya. 
      </p>
      <li>Lucy Liu sebagai Silvermist    </li>
-     <img src="d:\woodwalkers\Lucy Liu sebagai Silvermist.jpg" 
+     <img src="Lucy Liu sebagai Silvermist.jpg" 
      alt="Silvermist"
      width="200">
      <p>
         Silvermist adalah peri air yang lembut dan penuh kasih. Ia sering memberikan nasihat kepada teman-temannya dan memiliki sifat yang santai serta optimis.
      </p>
       <li>Kristin Chenoweth sebagai Rosetta    </li>
-      <img src="d:\woodwalkers\Kristin Chenoweth sebagai Rosetta.jpg"
+      <img src="Kristin Chenoweth sebagai Rosetta.jpg"
        alt="Rosetta"
        width="200">
      <p>
         Rosetta adalah peri taman yang elegan dan menyukai keindahan. Ia sangat menyukai bunga dan sering bersikap seperti kakak yang bijak bagi teman-temannya.
      </p>
      <li>America Ferrera sebagai Fawn    </li>
-     <img src="d:\woodwalkers\America Ferrera sebagai Fawn.jpg" 
+     <img src="America Ferrera sebagai Fawn.jpg" 
      alt="Fawn"
      width="200">
      <p>
@@ -239,7 +238,7 @@
      <h2>Day 4: Black Pink</h2>
      <!--image-->
      <a href="https://www.instagram.com/blackpinkofficial?igsh=MTE5cjkyMDdkZXV6MQ==">
-     <img src="d:\woodwalkers\black pinnk.jpg" 
+     <img src="black pinnk.jpg" 
      alt="Black Pink"
      width="400">
      </a>
@@ -289,27 +288,27 @@
      <ul>
          <li>Lisa</li>
          <a href="https://www.instagram.com/lalalalisa_m?igsh=MjNpbnBtZ2p5azBh">
-            <img src="d:\woodwalkers\lisa.webp" 
+            <img src="lisa.webp" 
             alt="Lisa"
             width="200">
 
          </a>
          <li>Rose</li>
          <a href="https://www.instagram.com/roses_are_rosie?igsh=MXBtNjdmMXQ3M3ozOA==">
-            <img src="d:\woodwalkers\Rose.jpg" 
+            <img src="Rose.jpg" 
             alt="Rose"
             width="200">
 
          </a>
          <li>Jennie</li>
          <a href="https://www.instagram.com/jennierubyjane?igsh=MXQwMXBiZGNnNjU5bg==">
-            <img src="d:\woodwalkers\images.jpg" 
+            <img src="images.jpg" 
             alt="Jennie"
             width="200">
          </a>
          <li>Jisoo</li>
          <a href="https://www.instagram.com/sooyaaa__?igsh=MW1kNXowM2JscDAwZA==">
-            <img src="d:\woodwalkers\Jisoo.jpg" 
+            <img src="Jisoo.jpg" 
             alt="Jisoo"
             width="200">
          </a>
@@ -321,7 +320,7 @@
      <hr>
      <!--DAY 5-->
      <h2>Day 5: Alat Musik Kalimantan Timur</h2>
-     <img src="d:\woodwalkers\alat musik.jpg" 
+     <img src="alat musik.jpg" 
      alt="alat musik"
      width="400">
      <p>
