--- a/Tugas 4/index.html
+++ b/Tugas 4/index.html
@@ -196,6 +196,23 @@
             "In addition to heavy exercise, I also like light exercise such as playing billiards. I usually play with my friends or my girlfriend. In billiards we can train the focus of the ball so that it can go in."
           </p>
         </div>
+        <!-- spotify -->
+        <div class="bg-[#F6DC43] p-4 shadow-md rounded-lg">
+          <div class="border-4 bg-black-500 bg-clip-padding p-3">
+          <hr><br>
+          <img
+            src="c:\Users\EPIC 1\Downloads\treasure-yellow.jpeg"
+            alt="Foto 4"
+            class="w-full h-70 object-cover rounded-md"
+            />
+            <br><br>
+            <p class="mt-2 text-center">
+              My FavSong Hehehe (≧∇≦)/
+            </p>
+            <br><br>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7jKwFhIqA1a1HLk6AsVDYc?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div>
+        </div>
       </div>
     </main>
 
